--- a/src/archive/web/js/zul/mesh/less/paging.less
+++ b/src/archive/web/js/zul/mesh/less/paging.less
@@ -2,7 +2,7 @@
 
 .z-paging {
 	height: @baseBarHeight;
-	border-bottom: 1px solid @pagingBorderColor;
+	//border-bottom: 1px solid @pagingBorderColor;
 	padding: 4px 10px 3px;
 	background: @ecdsLightBorderColor;
 	position: relative;
