--- a/src/archive/web/js/zul/wnd/less/window.less
+++ b/src/archive/web/js/zul/wnd/less/window.less
@@ -18,7 +18,7 @@
 	}
 
 	&-header {
-		border-bottom: 1px solid @baseBorderColor;
+		border-bottom: 1px solid @windowBackgroundColor;
 		.fontStyle(@baseTitleFontFamily, @fontSizeMedium, normal, @windowFontColor);
 		padding-left: 8px;
 		font-weight: bold;
