--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -4,8 +4,8 @@
 // ECDS
 // ------------------------------------
 @ecdsLightBorderColor:			#f2f2f2;
-@ecdsListboxHighlistColor:		#a6cbdf;
-@ecdsListboxBorderHighlistColor:#98c3da;
+@ecdsListboxHighlistColor:		#dceaf2;
+@ecdsListboxBorderHighlistColor:#C9DFEB;
 @ecdsListboxLightBorderColor:	#F0F2F4;
 @ecdsHighlightColor:			yellow;
 @ecdsHighlightColorDark1:		#e5e500;
@@ -41,6 +41,7 @@
 @ecdsSelectedColor:			   @googleBlue;
 @buttonColor:				   @ecdsSelectedColor;
 @loadingFontSize:				14px;
+@ecdsToolbarFontColor:			#777d87;
 
 
 
@@ -104,8 +105,8 @@
 @baseBackgroundColor:          #FFFFFF;
 
 // Gradient background
-@baseGradientStart:            #FEFEFE;
-@baseGradientEnd:              #EEEEEE;
+@baseGradientStart:            @ecdsWhiteColor;
+@baseGradientEnd:              #fbfbfb;
 
 // -------------------------------------
 // Icon font color (used for font-awesome)
@@ -300,7 +301,7 @@
 
 // window
 @windowBorderColor:            #CFCFCF;
-@windowBackgroundColor:        #f2f2f2;
+@windowBackgroundColor:        @ecdsLightBorderColor;
 @windowBackgroundColorDark1:   #ececec;
 @windowFontColor:			   #757575;
 @windowFramePadding:           0px;
