--- a/src/archive/web/zul/less/norm.less
+++ b/src/archive/web/zul/less/norm.less
@@ -692,7 +692,7 @@ select {
 } 
 
 select:disabled {
-	background-color: rgb(235, 235, 228);
+	background-color: @disabledBackgroundColor;
 	cursor: default;
 	border: 1px solid #cfcfcf;
 } 
