--- a/src/archive/web/js/zul/inp/less/combo.less
+++ b/src/archive/web/js/zul/inp/less/combo.less
@@ -22,7 +22,7 @@
 		background: @inputBackgroundColor;
 
 		&:focus {
-			.boxShadow('inset 1px 1px 1px rgba(210, 210, 210, 0.75)');
+			.boxShadow('inset 0 0 0 1px rgba(26,116,232,0.4)');
 		}
 		&[readonly] {
 			border-color: @readonlyBorderColor;
