--- a/src/archive/web/js/zul/wgt/less/toolbar.less
+++ b/src/archive/web/js/zul/wgt/less/toolbar.less
@@ -113,10 +113,10 @@
 	cursor: pointer;
 
 	&:hover { 
-		border-color: @hoverBorderColor; 
+		border-color: @baseBorderColor; 
 	}
 	&:active {
-		border-color: @hoverBorderColor; 
+		border-color: @baseBorderColor; 
 		.boxShadow('inset 1px 1px 1px rgba(210, 210, 210, 0.75), 0 0 7px #CFCFCF');
 	}
 	&[disabled] {
