--- a/src/archive/web/js/zul/inp/less/input.less
+++ b/src/archive/web/js/zul/inp/less/input.less
@@ -47,7 +47,7 @@
 // error box
 .z-errorbox {
 	color: @errorboxColor;
-	width: 260px;
+	width: 180px;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -69,7 +69,7 @@
 .z-errorbox-content {
 	.fontStyle(@baseContentFontFamily, @fontSizeSmall, normal, @errorboxColor);
 	width: 100%;
-	border: 1px solid @errorboxBorderColor;
+	border: 1px solid @errorboxBackgroundColor;
 	padding: 5px 20px 5px 26px;
 	background: @errorboxBackgroundColor;
 	vertical-align: middle;
