--- a/src/archive/web/js/zul/wgt/less/button.less
+++ b/src/archive/web/js/zul/wgt/less/button.less
@@ -16,7 +16,7 @@
 		background-color: @ecdsButtonHover;
 	}
 	&:focus {  
-		.boxShadow('0 0 0 2px rgba(26,116,232,0.4)');
+		.boxShadow('0 0 0 2px #689fc5');
 	}
 	&:active { 
 		background-color: @ecdsButtonActive;
