--- a/src/archive/web/zul/less/norm.less
+++ b/src/archive/web/zul/less/norm.less
@@ -297,7 +297,7 @@ input[type="checkbox"] {
 //label
 .z-label {
 	line-height: normal;
-	color: @ecdsBlackColor;
+	color: @labelColor;
 }
 .z-label,
 .z-radio-content,
