--- a/src/archive/web/zul/less/norm.less
+++ b/src/archive/web/zul/less/norm.less
@@ -934,3 +934,38 @@ body{
 	.grid-remove-border div.z-grid {
   border: none; 
 }
+@keyframes loadingbar {
+		0% {
+		    -webkit-transform: translateX(-100%);
+		    transform: translateX(-100%);
+		}
+		40% {
+		    -webkit-transform: translateX(0);
+		    transform: translateX(0);
+		}
+		60% {
+		    -webkit-transform: translateX(0);
+		    transform: translateX(0);
+		}
+		100% {
+		    -webkit-transform: translateX(100%);
+		    transform: translateX(100%);
+		}
+	  }
+	 .ecds{
+	 	overflow-x: hidden;
+	 }
+  	#zk_proc .z-loading-indicator, .z-apply-loading-indicator {
+  		background: #fbc308 !important;
+  		opacity: 1;
+  		width: 100vw;
+  		margin: 0px;
+  		padding: 0px;
+  		animation: loadingbar 1s ease-in-out infinite;
+  		 text-indent: 100%;
+		white-space: nowrap;
+		overflow: hidden;
+  		will-change: opacity,transform;
+  		height: .2rem;
+  	} 
+}
